load("//bazel/config:copt.bzl", "FLEXY_COPTS")

config_setting(
    name = "flexy_config_with_json",
    define_values = {"FLEXY_JSON": "true"},
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flexy",
    srcs = glob(["flexy/**/*.cpp", "flexy/**/*.S"]),
    hdrs = glob(["flexy/**/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jsoncpp//:jsoncpp",
        "@com_github_fmt//:fmt",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp",
        "@boringssl//:ssl",
        "@boringssl//:crypto",
    ],
    linkopts = [
        "-ldl",
        "-lpthread",
        "-lsqlite3",
        "-lmysqlclient",
    ],
    copts = FLEXY_COPTS,
    defines = select({
        "flexy_config_with_json": ["FLEXY_JSON"],
        "//conditions:default": ["FLEXY_YAML"],
    }),
)
