load("//bazel/config:copt.bzl", "FLEXY_COPTS")

cc_test(
    name = "test_function",
    srcs = ["test_function.cc"],
    deps = [
        "//:flexy",
        "@com_google_googletest//:gtest",
    ],
    copts = FLEXY_COPTS,
)

cc_test(
    name = "test_task",
    srcs = ["test_task.cc"],
    deps = [
        "//:flexy",
        "@com_google_googletest//:gtest",
    ],
    copts = FLEXY_COPTS,
)

# cc_test(
#     name = "test_file",
#     srcs = ["test_file.cc"],
#     deps = [
#         "//:flexy",
#         "@com_google_googletest//:gtest",
#     ],
#     copts = FLEXY_COPTS,
# )

cc_test(
    name = "test_fiber",
    srcs = ["test_fiber.cc"],
    deps = [
        "//:flexy",
        "@com_google_googletest//:gtest",
    ],
    copts = FLEXY_COPTS,
)
